--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -2,91 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import torch\n",
-    "from torch.nn.functional import conv2d as libConv2d"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class conv2Self():\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        input_data,\n",
-    "        kernel_size: tuple | int,\n",
-    "        bias: float | None = None,\n",
-    "        stride: int = 1,\n",
-    "        padding: tuple[int, int] | int | str = (0, 0),\n",
-    "        dilation: int = 1,\n",
-    "    ):\n",
-    "        self.input_data = input_data[0,0].numpy()\n",
-    "        self.input_data_for_torch = input_data\n",
-    "        self.bias = bias\n",
-    "        \n",
-    "        if type(kernel_size) == tuple:\n",
-    "            self.kernel_size = kernel_size\n",
-    "        else:\n",
-    "            self.kernel_size = (kernel_size, kernel_size)\n",
-    "\n",
-    "        self.stride = stride\n",
-    "\n",
-    "        self.dilation = dilation\n",
-    "\n",
-    "        if type(padding) == tuple:\n",
-    "            self.padding = padding[0]\n",
-    "        elif padding == \"same\":\n",
-    "            if self.stride != 1:\n",
-    "                raise ValueError(\"padding 'same' work only with stride=1\")\n",
-    "            self.padding = self.kernel_size[0]-1\n",
-    "        elif padding == \"valid\":\n",
-    "            self.padding = 0\n",
-    "        else:\n",
-    "            self.padding = (padding, padding)\n",
-    "            \n",
-    "        self.weight_tensor_for_torch = torch.randn(1,1,self.kernel_size[0], self.kernel_size[1])\n",
-    "        self.weight_tensor = self.weight_tensor_for_torch[0,0].numpy()\n",
-    "        \n",
-    "    def conv2d(self):\n",
-    "        image_height, image_width = self.input_data.shape\n",
-    "        weight_height, weight_width = self.weight_tensor.shape\n",
-    "        \n",
-    "        H_out = int((image_height - self.dilation * (weight_height - 1) - 1 + 2* self.padding)/self.stride) + 1\n",
-    "        W_out = int((image_width - self.dilation * (weight_width - 1) - 1 + 2* self.padding)/self.stride) + 1\n",
-    "        \n",
-    "        \n",
-    "        if self.padding>0:\n",
-    "            self.input_data = np.pad(self.input_data, self.padding, mode='constant')\n",
-    "        \n",
-    "        result = np.zeros((H_out, W_out))\n",
-    "        \n",
-    "        for y in range(H_out):\n",
-    "            for x in range(W_out):\n",
-    "                input_slice = self.input_data[y * self.stride:y * self.stride + weight_height, x * self.stride:x * self.stride + weight_width]\n",
-    "                result[y, x] = np.sum(input_slice * self.weight_tensor)\n",
-    "        \n",
-    "        if self.bias:\n",
-    "            result+=self.bias\n",
-    "            \n",
-    "        return result\n",
-    "    \n",
-    "    def torch_conv2d(self):\n",
-    "        return libConv2d(self.input_data_for_torch, self.weight_tensor_for_torch, self.bias, self.stride, self.padding, self.dilation)\n",
-    "    \n",
-    "    def test(self, print_flg=False):\n",
-    "        my_conv2d = self.conv2d()\n",
-    "        torch_out = np.array(self.torch_conv2d())\n",
-    "        if print_flg:\n",
-    "            print(my_conv2d)\n",
-    "            print(torch_out[0,0])\n",
-    "        print(np.allclose(my_conv2d, torch_out[0, 0]))"
+    "import numpy as np\n",
+    "import torch"
    ]
   },
   {
@@ -95,26 +16,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "image = torch.randn(1,1,5,5)\n",
+    "def myConv2d(\n",
+    "  matrix,\n",
+    "  in_channels,\n",
+    "  out_channels,\n",
+    "  kernel_size,\n",
+    "  stride=1,\n",
+    "  padding=0,\n",
+    "  dilation=1,\n",
+    "  groups=1,\n",
+    "  bias=True,\n",
+    "  padding_mode='zeros'\n",
+    "  ):\n",
+    "    if (in_channels%groups != 0) or (out_channels%groups!=0):\n",
+    "      raise Exception('in_channels and out_channels must be divisible by groups')\n",
     "\n",
-    "# Тестовый случай 1: Обычная свертка\n",
-    "c1 = conv2Self(image, kernel_size=1)\n",
+    "    if bias == True:\n",
+    "      bias_val = torch.rand(out_channels)\n",
+    "    else:\n",
+    "      bias_val = torch.zeros(out_channels)\n",
     "\n",
-    "# Тестовый случай 2: Свертка с padding='same'\n",
-    "c2 = conv2Self(image, kernel_size=1, padding='same')\n",
+    "    if (padding_mode == 'zeros'):\n",
+    "      pad = torch.nn.ZeroPad2d(padding)\n",
+    "      matrix = pad(matrix)\n",
+    "    if (padding_mode == 'reflect'):\n",
+    "      pad = torch.nn.ReflectionPad2d(padding)\n",
+    "      matrix = pad(matrix)\n",
+    "    if (padding_mode == 'replicate'):\n",
+    "      pad = torch.nn.ReplicationPad2d(2)\n",
+    "      matrix = pad(matrix)\n",
+    "    if (padding_mode == 'circular'):\n",
+    "      pad = torch.nn.CircularPad2d(padding)\n",
+    "      matrix = pad(matrix)\n",
     "\n",
-    "# Тестовый случай 3: Свертка с padding='valid'\n",
-    "c3 = conv2Self(image, kernel_size=1, padding='valid')\n",
+    "    if type(kernel_size) == tuple:\n",
+    "      weight = torch.rand(\n",
+    "        out_channels,\n",
+    "        in_channels//groups,\n",
+    "        kernel_size[0],\n",
+    "        kernel_size[1],\n",
+    "        )\n",
+    "    if type(kernel_size) == int:\n",
+    "      weight = torch.rand(\n",
+    "        out_channels,\n",
+    "        in_channels//groups,\n",
+    "        kernel_size,\n",
+    "        kernel_size,\n",
+    "        )\n",
+    "    result = []\n",
+    "    for l in range(out_channels):\n",
+    "      feature_map = np.array([])\n",
+    "      for i in range (0, matrix.shape[1]-((weight.shape[2]-1)*dilation+1)+1, stride):\n",
+    "        for j in range (0, matrix.shape[2]-((weight.shape[3]-1)*dilation+1)+1, stride):\n",
+    "          summa = 0\n",
+    "          for c in range (in_channels//groups):\n",
+    "            if groups>1:\n",
+    "              val = matrix[l*(in_channels//groups)+c][\n",
+    "                i:i+(weight.shape[2]-1)*dilation+1:dilation,\n",
+    "                j:j+(weight.shape[3]-1)*dilation+1:dilation,\n",
+    "                ]\n",
+    "            else:\n",
+    "              val = matrix[c][\n",
+    "                i:i+(weight.shape[2]-1)*dilation+1:dilation,\n",
+    "                j:j+(weight.shape[3]-1)*dilation+1:dilation,\n",
+    "                ]\n",
+    "            mini_sum = (val*weight[l][c]).sum()\n",
+    "            summa = summa + mini_sum\n",
+    "          feature_map = np.append(feature_map, float(summa + bias_val[l]))\n",
     "\n",
-    "# Тестовый случай 4: Различные размеры входных данных и ядра\n",
-    "c4 = conv2Self(image, kernel_size=4, padding='same')\n",
+    "      result.append(\n",
+    "        feature_map.reshape(\n",
+    "          (matrix.shape[1]-((weight.shape[2]-1)*dilation+1))//stride+1,\n",
+    "          (matrix.shape[2]-((weight.shape[3]-1)*dilation+1))//stride+1,\n",
+    "          ))\n",
     "\n",
-    "# Тестовый случай 5: Свертка с dilation\n",
-    "c5 = conv2Self(image, kernel_size=1, dilation=5)\n",
-    "\n",
-    "# Тестовый случай 6: Свертка с stride\n",
-    "c6 = conv2Self(image, kernel_size=1, stride=5)"
+    "    return np.array(result), np.array(weight), np.array(bias_val),\n"
    ]
   },
   {
@@ -123,7 +99,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tests = [c1,c2,c3,c4,c5,c6]"
+    "tensor1 = torch.rand(4, 5, 6)\n",
+    "tensor2 = torch.rand(3, 28, 28)\n",
+    "tensor3 = torch.rand(1, 1, 1)"
    ]
   },
   {
@@ -132,37 +110,139 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TestCase #1\n",
-      "True\n",
-      "TestCase #2\n",
-      "True\n",
-      "TestCase #3\n",
-      "True\n",
-      "TestCase #4\n",
-      "True\n",
-      "TestCase #5\n",
-      "True\n",
-      "TestCase #6\n",
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range(len(tests)):\n",
-    "    print(f\"TestCase #{i+1}\")\n",
-    "    tests[i].test()\n",
-    "    # print('\\n'*2)"
+    "result, weight, bias_val = myConv2d(\n",
+    "    tensor1,\n",
+    "    in_channels=4,\n",
+    "    out_channels=2,\n",
+    "    kernel_size=3,\n",
+    "    stride=1,\n",
+    "    padding=0,\n",
+    "    dilation=1,\n",
+    "    groups=2,\n",
+    "    bias=True,\n",
+    "    padding_mode='zeros',\n",
+    "    )\n",
+    "torchFunction = torch.nn.Conv2d(\n",
+    "    in_channels=4,\n",
+    "    out_channels=2,\n",
+    "    kernel_size=3,\n",
+    "    stride=1,\n",
+    "    padding=0,\n",
+    "    dilation=1,\n",
+    "    groups=2,\n",
+    "    bias=True,\n",
+    "    padding_mode='zeros',\n",
+    "    )\n",
+    "torchFunction.weight.data = torch.tensor(weight)\n",
+    "torchFunction.bias.data = torch.tensor(bias_val)\n",
+    "myResult = str(np.round(result, 2))\n",
+    "torchResult = str(np.round(np.array(torchFunction(tensor1).data), 2))\n",
+    "torchResult == myResult\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result2, weight2, bias_val2 = myConv2d(\n",
+    "    tensor2, in_channels=3, \n",
+    "    out_channels=1, \n",
+    "    kernel_size=3, \n",
+    "    stride=1, \n",
+    "    padding=0, \n",
+    "    dilation=2, \n",
+    "    groups=1, \n",
+    "    bias=True, \n",
+    "    padding_mode='zeros',\n",
+    "    )\n",
+    "torchFunction2 = torch.nn.Conv2d(\n",
+    "    in_channels=3, \n",
+    "    out_channels=1, \n",
+    "    kernel_size=3, \n",
+    "    stride=1, \n",
+    "    padding=0, \n",
+    "    dilation=2, \n",
+    "    groups=1, \n",
+    "    bias=True, \n",
+    "    padding_mode='zeros',\n",
+    "    )\n",
+    "torchFunction2.weight.data = torch.tensor(weight2)\n",
+    "torchFunction2.bias.data = torch.tensor(bias_val2)\n",
+    "myResult = str(np.round(result2, 2))\n",
+    "torchResult = str(np.round(np.array(torchFunction2(tensor2).data), 2))\n",
+    "torchResult == myResult"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result3, weight3, bias_val3 = myConv2d(\n",
+    "    tensor3, \n",
+    "    in_channels=1, \n",
+    "    out_channels=1, \n",
+    "    kernel_size=1, \n",
+    "    stride=1, \n",
+    "    padding=0, \n",
+    "    dilation=1, \n",
+    "    groups=1, \n",
+    "    bias=True, \n",
+    "    padding_mode='zeros',\n",
+    "    )\n",
+    "torchFunction3 = torch.nn.Conv2d(\n",
+    "    in_channels=1, \n",
+    "    out_channels=1, \n",
+    "    kernel_size=1, \n",
+    "    stride=1, \n",
+    "    padding=0, \n",
+    "    dilation=1, \n",
+    "    groups=1, \n",
+    "    bias=True, \n",
+    "    padding_mode='zeros',\n",
+    "    )\n",
+    "torchFunction3.weight.data = torch.tensor(weight3)\n",
+    "torchFunction3.bias.data = torch.tensor(bias_val3)\n",
+    "myResult = str(np.round(result3, 2))\n",
+    "torchResult = str(np.round(np.array(torchFunction3(tensor3).data), 2))\n",
+    "torchResult == myResult"
+   ]
   }
  ],
  "metadata": {
