--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -2,202 +2,250 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "import numpy as np\n",
-    "from torch.nn.functional import conv3d as libConv3d"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Conv3DSelf():\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        input_data,\n",
-    "        in_channels: int,\n",
-    "        out_channels: int,\n",
-    "        kernel_size: tuple | int,\n",
-    "        bias: float | None = None,\n",
-    "        stride: int = 1,\n",
-    "        padding: tuple[int, int] | int | str = (0, 0),\n",
-    "        dilation: int = 1,\n",
+    "def myConv3d(\n",
+    "    input_image,\n",
+    "    in_channels,\n",
+    "    out_channels,\n",
+    "    kernel_size,\n",
+    "    stride=1,\n",
+    "    padding=0,\n",
+    "    dilation=1,\n",
+    "    groups=1,\n",
+    "    bias=True,\n",
+    "    padding_mode='zeros',\n",
     "    ):\n",
-    "        self.input_data = input_data.numpy()\n",
-    "        self.input_data_for_torch = input_data\n",
-    "        self.bias = bias\n",
-    "        \n",
-    "        self.in_channels, self.out_channels = in_channels, out_channels\n",
-    "          \n",
-    "        if type(kernel_size) == tuple:\n",
-    "            self.kernel_size = kernel_size\n",
-    "        else:\n",
-    "            self.kernel_size = (kernel_size, kernel_size, kernel_size)\n",
-    "        \n",
-    "        if type(stride) == tuple:\n",
-    "            self.stride = stride\n",
-    "        else:\n",
-    "            self.stride = (stride, stride, stride)\n",
+    "    if (in_channels%groups != 0) or (out_channels%groups!=0):\n",
+    "      raise Exception('in_channels and out_channels must be divisible by groups')\n",
+    "    if bias == True:\n",
+    "      bias_val = torch.rand(out_channels)\n",
+    "    else:\n",
+    "      bias_val = torch.zeros(out_channels)\n",
+    "    if (padding_mode == 'zeros'):\n",
+    "      pad = torch.nn.ZeroPad3d(padding)\n",
+    "      input_image = pad(input_image)\n",
+    "    if (padding_mode == 'reflect'):\n",
+    "      pad = torch.nn.ReflectionPad3d(padding)\n",
+    "      input_image = pad(input_image)\n",
+    "    if (padding_mode == 'replicate'):\n",
+    "      pad = torch.nn.ReplicationPad3d(padding)\n",
+    "      input_image = pad(input_image)\n",
+    "    if (padding_mode == 'circular'):\n",
+    "      pad = torch.nn.CircularPad3d(padding)\n",
+    "      input_image = pad(input_image)\n",
+    "    if type(kernel_size) == tuple:\n",
+    "      weights = torch.rand(\n",
+    "          out_channels,\n",
+    "          in_channels//groups,\n",
+    "          kernel_size[0],\n",
+    "          kernel_size[1],\n",
+    "          kernel_size[2],\n",
+    "          )\n",
+    "    if type(kernel_size) == int:\n",
+    "      weights = torch.rand(\n",
+    "          out_channels,\n",
+    "          in_channels//groups,\n",
+    "          kernel_size,\n",
+    "          kernel_size,\n",
+    "          kernel_size,\n",
+    "          )\n",
+    "    result = []\n",
+    "    for l in range(out_channels):\n",
+    "      ceil_of_res = np.array([])\n",
+    "      for k in range (0, input_image.shape[1]-((weights.shape[2]-1)*dilation+1)+1, stride):\n",
+    "        for i in range (0, input_image.shape[2]-((weights.shape[3]-1)*dilation+1)+1, stride):\n",
+    "          for j in range (0, input_image.shape[3]-((weights.shape[4]-1)*dilation+1)+1, stride):\n",
+    "            preres = 0\n",
+    "            for c in range (in_channels//groups):\n",
+    "              if groups>1:\n",
+    "                val = input_image[l*(in_channels//groups)+c][\n",
+    "                    k:k+(weights.shape[2]-1)*dilation+1:dilation,\n",
+    "                    i:i+(weights.shape[3]-1)*dilation+1:dilation,\n",
+    "                    j:j+(weights.shape[4]-1)*dilation+1:dilation,\n",
+    "                    ]\n",
+    "              else:\n",
+    "                val = input_image[c][\n",
+    "                    k:k+(weights.shape[2]-1)*dilation+1:dilation,\n",
+    "                    i:i+(weights.shape[3]-1)*dilation+1:dilation,\n",
+    "                    j:j+(weights.shape[4]-1)*dilation+1:dilation,\n",
+    "                    ]\n",
+    "              prepreres = (val*weights[l][c]).sum()\n",
+    "              preres = preres + prepreres\n",
+    "            ceil_of_res = np.append(ceil_of_res, float(preres + bias_val[l]))\n",
     "\n",
-    "        if type(dilation) == tuple:\n",
-    "            self.dilation = dilation\n",
-    "        else:\n",
-    "            self.dilation = (dilation, dilation, dilation)\n",
-    "            \n",
-    "        if type(padding) == tuple:\n",
-    "            self.padding = padding\n",
-    "        elif padding == \"same\":\n",
-    "            if self.stride[0] != 1 or self.stride[1] != 1 or self.stride[2] != 1:\n",
-    "                raise ValueError(\"padding 'same' works only with stride=1\")\n",
-    "            self.padding = (self.kernel_size[0]-1,self.kernel_size[1]-1,self.kernel_size[2]-1)\n",
-    "        elif padding == \"valid\":\n",
-    "            self.padding = (0,0,0)\n",
-    "        else:\n",
-    "            self.padding = (padding,padding,padding)\n",
-    "            \n",
-    "        self.weight_tensor_for_torch = torch.randn(1, 1, self.kernel_size[0], self.kernel_size[1], self.kernel_size[2])\n",
-    "        self.weight_tensor = self.weight_tensor_for_torch.numpy()\n",
-    "        \n",
-    "    def conv3d(self):\n",
-    "        batches = len(self.input_data)\n",
-    "        out = []\n",
+    "      result.append(\n",
+    "          ceil_of_res.reshape(\n",
+    "              (input_image.shape[1]-((weights.shape[2]-1)*dilation+1))//stride+1,\n",
+    "              (input_image.shape[2]-((weights.shape[3]-1)*dilation+1))//stride+1,\n",
+    "              (input_image.shape[3]-((weights.shape[4]-1)*dilation+1))//stride+1,\n",
+    "              ))\n",
     "\n",
-    "        for b in range(batches):\n",
-    "            d_in = self.input_data[b].shape[1]\n",
-    "            h_in = self.input_data[b].shape[2]\n",
-    "            w_in = self.input_data[b].shape[3]\n",
-    "\n",
-    "            if self.kernel_size[0] > h_in or self.kernel_size[1] > w_in or self.kernel_size[2] > d_in:\n",
-    "                raise ValueError('kernel size can\\'t be greater than input size')\n",
-    "\n",
-    "            d_out = int(\n",
-    "                (d_in + 2 * self.padding[0] - self.dilation[0] * (self.kernel_size[0] - 1) - 1) / (self.stride[0]) + 1)\n",
-    "\n",
-    "            h_out = int(\n",
-    "                (h_in + 2 * self.padding[1] - self.dilation[1] * (self.kernel_size[1] - 1) - 1) / (self.stride[1]) + 1)\n",
-    "\n",
-    "            w_out = int(\n",
-    "                (w_in + 2 * self.padding[2] - self.dilation[2] * (self.kernel_size[2] - 1) - 1) / (self.stride[2]) + 1)\n",
-    "\n",
-    "            out.append(np.zeros((self.out_channels, d_out, h_out, w_out)))\n",
-    "\n",
-    "            for c_out in range(self.out_channels):\n",
-    "                for z_out in range(d_out):\n",
-    "                    for y_out in range(h_out):\n",
-    "                        for x_out in range(w_out):\n",
-    "                            sum = 0\n",
-    "                            for c_in in range(self.in_channels):\n",
-    "                                for kernel_z in range(self.kernel_size[0]):\n",
-    "                                    for kernel_y in range(self.kernel_size[1]):\n",
-    "                                        for kernel_x in range(self.kernel_size[2]):\n",
-    "                                            z_in = z_out * self.stride[0] + kernel_z * self.dilation[0] - self.padding[0]\n",
-    "                                            y_in = y_out * self.stride[1] + kernel_y * self.dilation[1] - self.padding[1]\n",
-    "                                            x_in = x_out * self.stride[2] + kernel_x * self.dilation[2] - self.padding[2]\n",
-    "                                            if 0 <= z_in < d_in and 0 <= y_in < h_in and 0 <= x_in < w_in:\n",
-    "                                                sum += self.input_data[b][c_in][z_in][y_in][x_in] * self.weight_tensor[c_out][c_in][kernel_z][kernel_y][kernel_x]\n",
-    "\n",
-    "                            out[b][c_out][z_out][y_out][x_out] = sum + (self.bias if self.bias else 0)\n",
-    "\n",
-    "        return np.array(out)\n",
-    "    \n",
-    "    def torch_conv3d(self):\n",
-    "        return libConv3d(\n",
-    "            self.input_data_for_torch,\n",
-    "            self.weight_tensor_for_torch,\n",
-    "            bias=torch.tensor([self.bias]), \n",
-    "            stride=self.stride,\n",
-    "            padding=self.padding,\n",
-    "            dilation=self.dilation,\n",
-    "        )\n",
-    "    \n",
-    "    def test(self, print_flg=False):\n",
-    "        my_conv3d = self.conv3d()\n",
-    "        torch_out = self.torch_conv3d().squeeze().detach().numpy()\n",
-    "        if print_flg:\n",
-    "            print(my_conv3d[0][0])\n",
-    "            print(torch_out)\n",
-    "        print(np.allclose(my_conv3d[0][0], torch_out))\n"
+    "    return np.array(result), torch.tensor(np.array(weights)), torch.tensor(np.array(bias_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def testing(input_data, in_channels, out_channels, kernel_size, bias, stride, padding, dilation):\n",
-    "    conv3d_layer = Conv3DSelf(input_data, in_channels=in_channels, out_channels=out_channels, kernel_size=kernel_size, bias=bias, stride=stride, padding=padding, dilation=dilation)\n",
-    "    conv3d_layer.test(print_flg=False)\n",
-    "input_data = torch.randn(1, 1, 5, 5, 5)\n",
-    "testing(input_data,1,1,4,0.5,1,'same',1)"
+    "tensor1 = torch.rand(4, 6, 6, 6)\n",
+    "tensor2 = torch.rand(3, 24, 28, 20)\n",
+    "tensor3 = torch.rand(1, 1, 1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "input_data = torch.randn(1, 1, 5, 5, 5)\n",
-    "testing(input_data,1,1,4,0.5,1,2,2)"
+    "result, kernel, bias_val = myConv3d(\n",
+    "    tensor1,\n",
+    "    in_channels=4,\n",
+    "    out_channels=2,\n",
+    "    kernel_size=3,\n",
+    "    stride=1,\n",
+    "    padding=0,\n",
+    "    dilation=1,\n",
+    "    groups=2,\n",
+    "    bias=True,\n",
+    "    padding_mode='zeros',\n",
+    "    )\n",
+    "torchFunction = torch.nn.Conv3d(\n",
+    "    in_channels=4,\n",
+    "    out_channels=2,\n",
+    "    kernel_size=3,\n",
+    "    stride=1,\n",
+    "    padding=0,\n",
+    "    dilation=1,\n",
+    "    groups=2,\n",
+    "    bias=True,\n",
+    "    padding_mode='zeros',\n",
+    "    )\n",
+    "torchFunction.weight.data = kernel\n",
+    "torchFunction.bias.data = bias_val\n",
+    "myResult = str(np.round(result, 2))\n",
+    "torchResult = str(np.round(np.array(torchFunction(tensor1).data), 2))\n",
+    "torchResult == myResult"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "input_data = torch.randn(1, 1, 5, 5, 5)\n",
-    "testing(input_data,1,1,4,0.5,4,2,2)"
+    "result2, kernel2, bias_val2 = myConv3d(\n",
+    "    tensor2,\n",
+    "    in_channels=3,\n",
+    "    out_channels=1,\n",
+    "    kernel_size=3,\n",
+    "    stride=1,\n",
+    "    padding=0,\n",
+    "    dilation=2,\n",
+    "    groups=1,\n",
+    "    bias=True,\n",
+    "    padding_mode='zeros',\n",
+    "    )\n",
+    "torchFunction2 = torch.nn.Conv3d(\n",
+    "    in_channels=3,\n",
+    "    out_channels=1,\n",
+    "    kernel_size=3,\n",
+    "    stride=1,\n",
+    "    padding=0,\n",
+    "    dilation=2,\n",
+    "    groups=1,\n",
+    "    bias=True,\n",
+    "    padding_mode='zeros',\n",
+    "    )\n",
+    "torchFunction2.weight.data = kernel2\n",
+    "torchFunction2.bias.data = bias_val2\n",
+    "myResult = str(np.round(result2, 2))\n",
+    "torchResult = str(np.round(np.array(torchFunction2(tensor2).data), 2))\n",
+    "torchResult == myResult"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
+     "ename": "TypeError",
+     "evalue": "myConv3d() missing 1 required positional argument: 'input_image'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m result3, kernel3, bias_val3 \u001b[38;5;241m=\u001b[39m \u001b[43mmyConv3d\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[43min_channels\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m    \u001b[49m\u001b[43mout_channels\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mkernel_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mstride\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpadding\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdilation\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgroups\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[43m    \u001b[49m\u001b[43mbias\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m     10\u001b[0m \u001b[43m    \u001b[49m\u001b[43mpadding_mode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mzeros\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     12\u001b[0m torchFunction3 \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mConv3d(\n\u001b[0;32m     13\u001b[0m     in_channels\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[0;32m     14\u001b[0m     out_channels\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     21\u001b[0m     padding_mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mzeros\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     22\u001b[0m     )\n\u001b[0;32m     23\u001b[0m torchFunction3\u001b[38;5;241m.\u001b[39mweight\u001b[38;5;241m.\u001b[39mdata \u001b[38;5;241m=\u001b[39m kernel3\n",
+      "\u001b[1;31mTypeError\u001b[0m: myConv3d() missing 1 required positional argument: 'input_image'"
      ]
     }
    ],
    "source": [
-    "input_data = torch.randn(1, 1, 5, 5, 5)\n",
-    "testing(input_data,1,1,2,0.5,1,2,2)"
+    "result3, kernel3, bias_val3 = myConv3d(\n",
+    "    in_channels=1,\n",
+    "    out_channels=1,\n",
+    "    kernel_size=1,\n",
+    "    stride=1,\n",
+    "    padding=0,\n",
+    "    dilation=1,\n",
+    "    groups=1,\n",
+    "    bias=True,\n",
+    "    padding_mode='zeros',\n",
+    "    )\n",
+    "torchFunction3 = torch.nn.Conv3d(\n",
+    "    in_channels=1,\n",
+    "    out_channels=1,\n",
+    "    kernel_size=1,\n",
+    "    stride=1,\n",
+    "    padding=0,\n",
+    "    dilation=1,\n",
+    "    groups=1,\n",
+    "    bias=True,\n",
+    "    padding_mode='zeros',\n",
+    "    )\n",
+    "torchFunction3.weight.data = kernel3\n",
+    "torchFunction3.bias.data = bias_val3\n",
+    "myResult = str(np.round(result3, 2))\n",
+    "torchResult = str(np.round(np.array(torchFunction3(tensor3).data), 2))\n",
+    "torchResult == myResult"
    ]
   }
  ],
